# GCP-agent

./: .env.example  .gitignore  Dockerfile  cloudbuild.yaml  docker_compose.yml  file-structure.txt  pyproject.toml  requirements.txt
App/: __init__.py
App/Api/V1/Middleware/: authentication.py  rate_limiting.py
App/Api/V1/Models/: request_models.py  response_models.py
App/Api/V1/Routes/: generation.py
App/Config/: __init__.py  gcp_config.py  logging.py  settings.py
App/Core/: __init__.py  chain_of_thought_verifier.py  observability_manager.py  planning_agent.py  react_agent.py  task_execution_engine.py
App/Data_Flow/: __init__.py  code_generation_flow.py  data_flow_manager.py  deployment_flow.py  integration_flow.py  requirement_ingestion_flow.py
App/Deployment/: cloud_run_deployer.py
App/Error_Handling/: self_healing_system.py
App/GCP_Services/: firestore_client.py  gcp_services_setup.py
App/Integration/: compatibility_checker.py
App/Integration/Integration_Patterns/: bff.py  cqrs.py  event_driven.py  microservices.py
App/LLM-Integration/: __init__.py  anthropic_provider.py  base.py  custom_provider.py  google_provider.py  llm_manager.py  model_evaluator.py  openai_provider.py  rate_limiter.py
App/LLM-Integration/Provider/: __init__.py
App/Module_Generators/: __init__.py  auth_generator.py  backend_generator.py  base_generator.py  database_generator.py  frontend_generator.py  module_integrator.py
App/Module_Generators/Templates/Angular/: app_template.py
App/Module_Generators/Templates/Cloud_SQL/: client_template.py
App/Module_Generators/Templates/Express/: app_template.py
App/Module_Generators/Templates/Fast_API/: fastapi_template.py
App/Module_Generators/Templates/Firestore/: client_template.py
App/Module_Generators/Templates/React/: app_template.py
App/Module_Generators/Templates/Vue/: app_template.py
App/Performance/: code_quality_analyser.py  integration_test_framework.py  metrics_collector.py  performance_monitor.py  performance_test_suite.py
App/State_Management/: __init__.py  amem_state_manager.py  firestore_vector_store.py
App/UI/Templates/: dashboard.html
App/Utils/: __init__.py  helpers.py
Docs/: README.md
Terraform/: main.tf  outputs.tf  variables.tf
